--- a/index.html
+++ b/index.html
@@ -15,47 +15,47 @@
 
   <div class=" h-screen flex justify-center items-center  ">
     <!-- inner -->
-    <div id="end" class="max-sm:pb-9 block max-sm:mt-9 px-6 ">
+    <div id="end" class="max-sm:pb-9 block max-sm:mt-9 px-4 ">
       <div
        id="boxes" draggable="true" class="  overflow-hidden p-4 border-dashed border-2 border-[#155E95] bg-[ghostwhite] m-auto  cursor-pointer grid grid-cols-3  ">
         
        <!-- first -->
         <div id="box" class="dragging " draggable="true">
-          <h1 class="text-4xl  max-sm:text-3xl max-sm:w-20 max-sm:h-20 hover:opacity-75  flex items-center justify-center w-32 h-32  bg-emerald-200">1</h1>
+          <h1 class=" box text-4xl box1  max-sm:text-3xl max-sm:w-20 max-sm:h-20 hover:opacity-75  flex items-center justify-center w-32 h-32  bg-emerald-200">1</h1>
         </div>
         <!-- second -->
         <div>
-      <div id="box" class="dragging    " draggable="true">
-            <h1 id="name" class="text-4xl max-sm:text-3xl max-sm:w-20 max-sm:h-20 bg-slate-600  w-32 h-32 flex items-center hover:opacity-90 justify-center ">2</h1>
+      <div id="box" class="dragging " draggable="true">
+            <h1 id="name" class="box text-4xl max-sm:text-3xl max-sm:w-20 max-sm:h-20 bg-slate-600  w-32 h-32 flex items-center hover:opacity-90 justify-center ">2</h1>
           </div>
         </div>
         <!-- third -->
-        <div id="box" class="dragging  " draggable="true">
-          <h1 id="name" class="text-4xl max-sm:w-20 max-sm:h-20 max-sm:text-3xl bg-lime-900 hover:opacity-90  w-32 h-32 flex items-center justify-center ">3</h1>
+        <div id="box" class="dragging" draggable="true">
+          <h1 id="name" class="box  text-4xl max-sm:w-20 max-sm:h-20 max-sm:text-3xl bg-lime-900 hover:opacity-90  w-32 h-32 flex items-center justify-center ">3</h1>
         </div>
         <!-- four -->
         <div id="box" class="dragging " draggable="true">
-          <h1 class="text-4xl  max-sm:text-3xl max-sm:w-20 max-sm:h-20 items-center justify-center hover:opacity-65  bg-red-200 flex w-32 h-32">4</h1>
+          <h1 class="box text-4xl  max-sm:text-3xl max-sm:w-20 max-sm:h-20 items-center justify-center hover:opacity-65  bg-red-200 flex w-32 h-32">4</h1>
         </div>
         <!-- five -->
         <div id="box" class="dragging " draggable="true">
-          <h1 class="text-4xl m-auto max-sm:text-3xl max-sm:w-20 max-sm:h-20 items-center justify-center   hover:opacity-90 bg-cyan-700 flex w-32 h-32">5</h1>
+          <h1 class="box text-4xl m-auto max-sm:text-3xl max-sm:w-20 max-sm:h-20 items-center justify-center   hover:opacity-90 bg-cyan-700 flex w-32 h-32">5</h1>
         </div>
         <!-- six -->
-        <div id="box" class="dragging  " draggable="true">
-          <h1 class="text-4xl m-auto max-sm:text-3xl max-sm:w-20 max-sm:h-20 hover:opacity-90 bg-cyan-950 flex w-32 h-32 items-center justify-center">6</h1>
+        <div id="box" class="dragging" draggable="true">
+          <h1 class="box text-4xl m-auto max-sm:text-3xl max-sm:w-20 max-sm:h-20 hover:opacity-90 bg-cyan-950 flex w-32 h-32 items-center justify-center">6</h1>
         </div>
         <!-- seven -->
-        <div id="box" class="dragging  " draggable="true">
-          <h1 class="text-4xl  max-sm:w-20 max-sm:h-20 items-center hover:opacity-90   justify-center m-auto max-sm:text-3xl bg-zinc-500 flex w-32 h-32 ">7</h1>
+        <div id="box" class="dragging" draggable="true">
+          <h1 class="box text-4xl  max-sm:w-20 max-sm:h-20 items-center hover:opacity-90   justify-center m-auto max-sm:text-3xl bg-zinc-500 flex w-32 h-32 ">7</h1>
         </div>
         <!-- eight -->
-        <div id="box" class="dragging  " draggable="true">
-          <h1 class="text-4xl items-center max-sm:w-20 max-sm:h-20 hover:opacity-90  bg-purple-900 flex w-32 h-32 justify-center max-sm:text-3xl">8</h1>
+        <div id="box" class="dragging" draggable="true">
+          <h1 class="box text-4xl items-center max-sm:w-20 max-sm:h-20 hover:opacity-90  bg-purple-900 flex w-32 h-32 justify-center max-sm:text-3xl">8</h1>
         </div>
         <!-- nine -->
-        <div id="box" class="dragging" draggable="true">
-          <h1 class="text-4xl m-auto max-sm:text-3xl justify-center  items-center bg-lime-400 flex w-32 h-32 max-sm:w-20 max-sm:h-20 hover:opacity-80 ">9</h1>
+        <div id="box" class=" dragging" draggable="true">
+          <h1 class="box text-4xl m-auto max-sm:text-3xl justify-center  items-center bg-lime-400 flex w-32 h-32 max-sm:w-20 max-sm:h-20 hover:opacity-80 ">9</h1>
         </div>
         <!--  end-->
       </div>
@@ -68,13 +68,13 @@
       id="countdown" class="bg-pink-300 flex m-auto mt-5 w-auto h-auto text-xl px-10 py-2 max-sm:px-7 rounded-xl font-medium hover:bg-slate-600 transition-all duration-300 hover:text-white -tracking-tight"
       onclick="Click()">start
     </button>
-    <p id="time" class="flex justify-center items-center text-2xl mt-4" ></p>  
-    <button id="stop" class="bg-pink-300  flex m-auto mt-5 w-auto h-auto text-xl px-10 py-2 max-sm:px-7 rounded-xl font-medium hover:bg-slate-600 transition-all duration-300 hover:text-white -tracking-tight" onclick="ClearInterval()">Stop</button>
+    <button id="stop" class="bg-pink-300  flex m-auto mt-5 w-auto h-auto text-xl px-10 py-2 max-sm:px-7 rounded-xl font-medium hover:bg-slate-600 transition-all duration-300 hover:text-white -tracking-tight" onclick="ClearInterval()">Submit</button>
   </div>
+  <p id="time" class="flex justify-center items-center text-2xl mt-4 max-sm:text-xl " ></p>  
     </div>    
   </div>
 
-  <div id="modal" class="bg-slate-300 text-3xl fixed h-28 w-96 top-1/2 left-1/2 transform translate-x-[-50%] translate-y-[-100%] items-center justify-center hidden ">
+  <div id="modal" class="bg-slate-300 text-3xl fixed h-28 w-96 top-1/2 left-1/2 transform translate-x-[-50%] translate-y-[-100%] items-center justify-center hidden max-sm:w-64 ">
     Time up!
     <ion-icon  class="cursor-pointer bg-black text-white  hover:bg-black hover:text-white  -right-3 absolute  -top-3 hover:opacity-65 transition-all duration-300 rounded-[9999px]  justify-end " name="close-outline" onclick="handelClose()"></ion-icon>
   </div>
