--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class=" h-screen flex justify-center items-center  ">
     <!-- inner -->
-    <div id="end" class="max-sm:pb-9 block max-sm:mt-9 px-4 ">
+    <div id="end" class="max-sm:pb-9 block  px-4 ">
       <div
        id="boxes" draggable="true" class="  overflow-hidden p-4 border-dashed border-2 border-[#155E95] bg-[ghostwhite] m-auto  cursor-pointer grid grid-cols-3  ">
         
