--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <div class=" h-screen flex justify-center items-center  ">
+  <div class=" h-full flex justify-center items-center  ">
     <!-- inner -->
     <div  class="px-4 ">
       <div
