--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <div class=" h-full pt-20 flex justify-center items-center  ">
+  <div class=" h-full py-11 overflow-hidden flex justify-center items-center ">
     <!-- inner -->
     <div  class="px-4 ">
       <p id="time" class="flex justify-center items-center text-2xl mb-6 max-sm:text-xl " ></p>  
